# tm

./: AGENTS.md  Cargo.toml  INITIAL-PLAN.md  Makefile  README.md  TUI.md
.cargo/: config.toml
.github/workflows/: build.yml
benches/: benchmarks.rs
src/: client.rs  config.rs  copy.rs  grid.rs  key_bind.rs  keys.rs  layout.rs  lib.rs  log.rs  main.rs  prompt.rs  protocol.rs  pty.rs  render.rs  screen.rs  server.rs  simd.rs  state.rs  sys.rs  tty.rs  vt.rs
